--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -15,9 +15,18 @@
 // Some temp fixes
 //@import "fixes";
 
+// @import '~@angular/material/prebuilt-themes/purple-green.css';
+// @import 'path/to/paginator-custom-theme.scss';
+
+
 // If you want to add custom CSS you can put it here.
 @import "custom";
 
 // Examples
 // We use those styles to show code examples, you should remove them in your application.
 @import "examples";
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
