--- a/src/app/views/pages/login/login.component.html
+++ b/src/app/views/pages/login/login.component.html
@@ -1,18 +1,19 @@
-<div class="bg-light dark:bg-transparent min-vh-100 d-flex flex-row align-items-center">
+<div class="min-vh-100 d-flex flex-row align-items-center" style="background-color: #30916b;">
   <c-container breakpoint="md">
     <c-row class="justify-content-center">
-      <c-col lg="10" xl="8">
+      <c-col lg="12" xl="8">
         <c-card-group>
           <c-card class="p-4">
             <c-card-body>
-              <form cForm>
+
+              <form cForm (submit)="login($event, username.value, password.value)">
                 <h1>Login</h1>
                 <p class="text-body-secondary">Sign In to your account</p>
                 <c-input-group class="mb-3">
                   <span cInputGroupText>
                     <svg cIcon name="cilUser"></svg>
                   </span>
-                  <input autoComplete="username" cFormControl placeholder="Username" />
+                  <input autoComplete="username" cFormControl placeholder="Username" #username required/>
                 </c-input-group>
                 <c-input-group class="mb-4">
                   <span cInputGroupText>
@@ -23,11 +24,13 @@
                     cFormControl
                     placeholder="Password"
                     type="password"
+                    required
+                    #password
                   />
                 </c-input-group>
                 <c-row>
                   <c-col xs="6">
-                    <button cButton class="px-4" color="primary">
+                    <button cButton type="submit" class="px-4" color="primary" style="background-color: #30916b;" >
                       Login
                     </button>
                   </c-col>
@@ -38,20 +41,14 @@
                   </c-col>
                 </c-row>
               </form>
+
             </c-card-body>
           </c-card>
-          <c-card [ngStyle]="{'minWidth.%': 44}" class="text-white bg-primary py-5">
+          <c-card [ngStyle]="{'minWidth.%': 44}" class="text-white  py-5">
             <c-card-body class="text-center">
-              <div>
-                <h2>Sign up</h2>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                  tempor incididunt ut labore et dolore magna aliqua.
-                </p>
-                <button [active]="true" cButton class="mt-3" color="primary" routerLink="/register">
-                  Register Now!
-                </button>
-              </div>
+              <img src="https://party.ect.go.th/themes/ect-pr/assets/images/logo_ect_big.png" height="200" alt="ss"
+                 />
+              <br />
             </c-card-body>
           </c-card>
         </c-card-group>
