--- a/src/app/views/charts/charts.component.html
+++ b/src/app/views/charts/charts.component.html
@@ -1,11 +1,11 @@
 <c-row>
-  <c-col xs="12">
+  <!-- <c-col xs="12">
     <app-docs-callout href="charts">
       CoreUI Angular wrapper component for Chart.js 4.4, the most popular charting library.
       <br>
     </app-docs-callout>
-  </c-col>
-  <c-col xs="12" lg="6">
+  </c-col> -->
+  <!-- <c-col xs="12" lg="6">
     <c-card class="mb-4">
       <c-card-header>
         Bar Chart
@@ -14,20 +14,20 @@
         <c-chart type="bar" [data]="chartBarData" [options]="options" />
       </c-card-body>
     </c-card>
-  </c-col>
+  </c-col> -->
   <c-col xs="12" lg="6">
-    <c-card class="mb-4">
+    <!-- <c-card class="mb-4">
       <c-card-header>
         Line Chart
       </c-card-header>
       <c-card-body>
         <c-chart type="line" [data]="chartLineData" [options]="options" />
       </c-card-body>
-    </c-card>
+    </c-card> -->
   </c-col>
 </c-row>
 <c-row>
-  <c-col xs="12" lg="6">
+  <!-- <c-col xs="12" lg="6">
     <c-card class="mb-4">
       <c-card-header>
         Doughnut Chart
@@ -36,8 +36,11 @@
         <c-chart type="doughnut" [data]="chartDoughnutData" [options]="options" />
       </c-card-body>
     </c-card>
-  </c-col>
-  <c-col xs="12" lg="6">
+  </c-col> -->
+  
+</c-row>
+<br/>
+<c-col >
     <c-card class="mb-4">
       <c-card-header>
         Pie Chart
@@ -47,8 +50,8 @@
       </c-card-body>
     </c-card>
   </c-col>
-</c-row>
-<c-row>
+
+<!-- <c-row>
   <c-col xs="12" lg="6">
     <c-card class="mb-4">
       <c-card-header>
@@ -69,4 +72,4 @@
       </c-card-body>
     </c-card>
   </c-col>
-</c-row>
+</c-row> -->
