--- a/src/app/views/defaultdata/assettypecode/defaultdata.component.html
+++ b/src/app/views/defaultdata/assettypecode/defaultdata.component.html
@@ -17,6 +17,7 @@
                 <input cFormControl 
                 name="assetCode" 
                 id="assetCodeInput" 
+                [(ngModel)]="asset.assetCode" 
                 placeholder="ระบุรหัสสินทรัพย์" 
                 class="form-control" type="text">
               </div>
@@ -26,6 +27,7 @@
                 <input cFormControl 
                 name="assetName" 
                 id="assetNameInput" 
+                [(ngModel)]="asset.assetName" 
                 placeholder="ระบุประเภทสินทรัพย์" 
                 class="form-control" type="text">
               </div>
