--- a/src/app/views/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard.component.html
@@ -1,11 +1,68 @@
+
 <app-widgets-dropdown />
-<c-card class="my-4">
-  <c-card-body>
+
+<div class="row">
+
+  <div class="col-8">
+    <br/>
+    <app-tablewiget/>
+    <!-- <app-asset-table/> -->
+  <!-- <c-card-footer>
+    <c-row class="text-center mb-2" [xl]="5" [lg]="4" [sm]="2" [xs]="1" [gutter]="4">
+      <c-col>
+        <div class="text-body-secondary">สินทรัพย์</div>
+        <strong>{{this.numberOfAssets}}</strong>
+        <c-progress class="mt-2" thin color="success" value="40" />
+      </c-col>
+      <c-col>
+        <div class="text-body-secondary">Unique</div>
+        <div class="fw-semibold text-truncate">24.093 Users (20%)</div>
+        <c-progress class="mt-2" thin color="info" value="20" />
+      </c-col>
+      <c-col>
+        <div class="text-body-secondary">Page views</div>
+        <div class="fw-semibold text-truncate">78.706 Views (60%)</div>
+        <c-progress class="mt-2" thin color="warning" value="60" />
+      </c-col>
+      <c-col>
+        <div class="text-body-secondary">New Users</div>
+        <div class="fw-semibold text-truncate">22.123 Users (80%)</div>
+        <c-progress class="mt-2" thin color="danger" value="80" />
+      </c-col>
+      <c-col class="d-none d-xl-block">
+        <div class="text-body-secondary">Bounce Rate</div>
+        <div class="fw-semibold text-truncate">Average Rate (40.15%)</div>
+        <c-progress class="mt-2" thin value="40" />
+      </c-col>
+    </c-row>
+  </c-card-footer> -->
+  </div>
+
+  <div class="col-4">
+    <app-charts/>
+  </div>
+
+</div><br/>
+
+<div class="row">
+  <div class="col-6">
+    <app-tablewiget2/>
+  </div>
+  <div class="col-6">
+    <app-tablewiget3/>
+  </div>
+  
+</div>
+
+
+<!-- <c-card class="my-4"> -->
+  <!-- <c-card-body>
     <c-row>
       <c-col sm="5">
         <h4 class="card-title mb-0" id="traffic">Traffic</h4>
         <div class="small text-body-secondary">January - December 2023</div>
       </c-col>
+
       <c-col class="d-none d-md-block" sm="7">
         <button cButton class="float-end" color="primary">
           <svg cIcon name="cilCloudDownload"></svg>
@@ -61,6 +118,8 @@
         </form>
       </c-col>
     </c-row>
+    <app-asset-table/>
+
     <c-chart
       [data]="mainChart.data"
       [height]="300"
@@ -71,12 +130,12 @@
     >
       Main chart
     </c-chart>
-  </c-card-body>
-  <c-card-footer>
+  </c-card-body> -->
+  <!-- <c-card-footer>
     <c-row class="text-center mb-2" [xl]="5" [lg]="4" [sm]="2" [xs]="1" [gutter]="4">
       <c-col>
-        <div class="text-body-secondary">Visits</div>
-        <strong>29.703 Users (40%)</strong>
+        <div class="text-body-secondary">สินทรัพย์</div>
+        <strong>{{this.numberOfAssets}}</strong>
         <c-progress class="mt-2" thin color="success" value="40" />
       </c-col>
       <c-col>
@@ -100,12 +159,12 @@
         <c-progress class="mt-2" thin value="40" />
       </c-col>
     </c-row>
-  </c-card-footer>
-</c-card>
+  </c-card-footer> -->
+<!-- </c-card> -->
 
-<app-widgets-brand [withCharts]="true" />
+<!-- <app-widgets-brand [withCharts]="true" /> -->
 
-<c-row class="mt-4">
+<!-- <c-row class="mt-4">
   <c-col xs>
     <c-card class="mb-4">
       <c-card-header>Traffic {{ "&" }} Sales</c-card-header>
@@ -310,8 +369,8 @@
       </c-card-body>
     </c-card>
   </c-col>
-</c-row>
-<c-row>
+</c-row> -->
+<!-- <c-row>
   <c-col xs>
     <c-card class="mb-4">
       <c-card-body>
@@ -385,4 +444,4 @@
       </c-card-body>
     </c-card>
   </c-col>
-</c-row>
+</c-row> -->
