--- a/src/app/views/defaultdata/faction-code/faction-code.component.html
+++ b/src/app/views/defaultdata/faction-code/faction-code.component.html
@@ -5,24 +5,28 @@
       <strong>กำหนดรหัสฝ่าย</strong>
   </c-card-header>
     <c-card-body>
-      <form  cForm >
+      <form  cForm (submit)="onSubmit()" >
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 mb-3">
-          <div class="col-5">
+          <div class="col">
               <label cLabel 
                   for="assetCodeInput">รหัสที่ตั้ง</label>
               <input cFormControl
                   id="assetCodeInput"
                   placeholder="ระบุรหัสสินทรัพย์"
+                  name="FactionCode"
+                  [(ngModel)]="asset.FactionCode" 
                   class="form-control"
                   type="text"
               />
           </div>
-          <div class="col-6">
+          <div class="col">
               <label cLabel 
                   for="assetNameInput">ชื่อที่ตั้ง</label>
               <input cFormControl
                   id="assetNameInput"
                   placeholder="ระบุชื่อ/ลักษณะ/ยี่ห้อ สินทรัพย์"
+                  name="FactionName"
+                  [(ngModel)]="asset.FactionName"
                   class="form-control"
                   type="text"
               />
@@ -58,8 +62,7 @@
               <th mat-header-cell *matHeaderCellDef mat-sort-header style="font-weight: bold;">{{ column }}</th>
               <td mat-cell *matCellDef="let asset">{{ asset[column] }}</td>
             </ng-container>
-          
-            <!-- Header Row -->
+        
             <!-- Header Row -->
             <tr mat-header-row *matHeaderRowDef="['actions', 'รหัสแผนก', 'ชื่อแผนก']"></tr>
         
