--- a/src/app/views/pages/login/login.component.html
+++ b/src/app/views/pages/login/login.component.html
@@ -13,7 +13,7 @@
                   <span cInputGroupText>
                     <svg cIcon name="cilUser"></svg>
                   </span>
-                  <input autoComplete="username" cFormControl placeholder="Username" #username required/>
+                  <input autoComplete="username" cFormControl placeholder="Username" type="email" #username required/>
                 </c-input-group>
                 <c-input-group class="mb-4">
                   <span cInputGroupText>
