--- a/src/app/views/system/asset-table/asset-table.component.html
+++ b/src/app/views/system/asset-table/asset-table.component.html
@@ -2,38 +2,30 @@
     <c-card-header>
         <div style="display: flex; justify-content: space-between; align-items: center;">
             <strong style="margin-right: auto;">เพิ่มรายละเอียดครุภัฑณ์</strong>
-            <button class="btn btn-sm btn-success"style="color: white;" (click)="addasset()">
+
+            <button class="btn btn-sm btn-success"
+                style="color: white;" (click)="addasset()">
               <svg [cIcon]="icons.cibAddthis" ></svg> เพิ่มครุภัฑณ์
             </button>
-            <button class="btn btn-sm btn-primary m-1"style="color: white;" (click)="exportExcel()">
+
+            <button class="btn btn-sm btn-primary m-1"
+                style="color: white;" (click)="exportExcel()">
                 <svg [cIcon]="icons.cilDataTransferDown"></svg>
             </button>
           </div>
-      </c-card-header>
-      
+        </c-card-header>
     <c-card-body>
-
-        <!-- <form cForm (submit)="searchAsset()"> -->
-        <form cForm >
-            <div class="row mb-3">
-              <div class="col">
-                  <label cLabel for="assetCodeInput">ค้นหา</label>
-                  <input cFormControl matInput (keyup)="applyFilter($event)" placeholder="ค้นหาข้อมูลในตารางได้ . . . " />
-              </div>
-              <!-- <div class="col align-self-end">
-                  <button type="submit" class="btn btn-primary">เพิ่ม</button>
-              </div> -->
-            </div>
-          </form>
-          
-          
       <!-- <app-docs-example href="forms/form-control"> -->
         <div class="table-responsive">
-            <table class="table table-striped table-hover " style="font-size: 14px; width: max-content;" mat-table [dataSource]="dataSource" matSort>
-        
+            <table class="table table-striped table-hover " style="font-size: 15px; width: fit-content;" 
+                mat-table [dataSource]="dataSource" matSort>
                 <!-- Actions Column -->
                 <ng-container matColumnDef="Aactions">
-                    <th class="" mat-header-cell *matHeaderCellDef style="color: black;font-weight: bold;"> # </th>
+                    
+                    <th class="" mat-header-cell *matHeaderCellDef style="color: black;font-weight: bold;"> 
+                        # <input cFormControl sizing="sm" disabled/>
+                    </th>
+                    
                     <td mat-cell *matCellDef="let asset">
                         <button class="btn btn-sm btn-primary m-1" 
                             (click)="deleteAsset(asset)" style="width: 28px;height: 28px; padding: 4px;">
@@ -55,32 +47,40 @@
                 </ng-container>
         
                 <!-- Dynamic Columns -->
-                <ng-container *ngFor="let column of displayedColumns2" [matColumnDef]="column">
-                    <th class="mat-header-cell" mat-header-cell *matHeaderCellDef mat-sort-header style="color: black; font-weight: bold;"> {{ column }} </th>
-                    <td mat-cell *matCellDef="let asset"> 
-                        {{ column === 'ราคาต่อหน่วย' ? (asset[column] | currency:'':'':'1.2-2') : asset[column] }} 
+                <ng-container *ngFor="let column of displayedColumns2; let i = index" [matColumnDef]="column">
+                    <th class="mat-header-cell" mat-header-cell *matHeaderCellDef mat-sort-header>
+                        <div style="color: black; font-weight: bold;">
+                            <label cLabel>{{ column }}</label>
+                            <input cFormControl sizing="sm"
+                                   (keyup)="applyFilter($event)" 
+                                   (focus)="setupFilter(column)" />
+                        </div>
+                    </th>
+                    <td mat-cell *matCellDef="let asset">
+                        <div *ngIf="column!== 'ราคาต่อหน่วย'; else currencyFormat">
+                            {{ asset[column] }}
+                        </div>
+                        <ng-template #currencyFormat>
+                            {{ asset[column] | currency:'':'':'1.2-2' }}
+                        </ng-template>
                     </td>
                 </ng-container>
                 
-        
+                
                 <!-- Header Row -->
-                <tr mat-header-row *matHeaderRowDef="['Aactions', 'วันเดือนปี', 'รหัสครุภัณฑ์', 'รายการ', 'ราคาต่อหน่วย', 'วิธีการได้มา', 'เลขที่เอกสาร', 'ฝ่าย', 'ผู้ใช้งาน', 'หมายเหตุ']"></tr>
+                <tr mat-header-row *matHeaderRowDef="['Aactions', 'วันเดือนปี', 'รหัสครุภัณฑ์', 'รายการ', 'ราคาต่อหน่วย', 'วิธีการได้มา', 'เลขที่เอกสาร', 'แผนก', 'ที่อยู่', 'ผู้ใช้งาน', 'หมายเหตุ']"></tr>
         
                 <!-- Data Rows -->
-                <tr mat-row *matRowDef="let row; columns: ['Aactions','วันเดือนปี', 'รหัสครุภัณฑ์', 'รายการ', 'ราคาต่อหน่วย', 'วิธีการได้มา', 'เลขที่เอกสาร', 'ฝ่าย', 'ผู้ใช้งาน', 'หมายเหตุ'];"></tr>
+                <tr mat-row *matRowDef="let row; columns: ['Aactions','วันเดือนปี', 'รหัสครุภัณฑ์', 'รายการ', 'ราคาต่อหน่วย', 'วิธีการได้มา', 'เลขที่เอกสาร', 'แผนก', 'ที่อยู่', 'ผู้ใช้งาน', 'หมายเหตุ'];"></tr>
             </table>
-        
 
             <!-- Paginator -->
-            <mat-paginator [pageSizeOptions]="[ 30, 50, 70, 100]" [pageSize]="20" showFirstLastButtons class="paginator-style"></mat-paginator>
+            <mat-paginator 
+                [pageSizeOptions]="[ 5,10,15,30, 50, 70, 100]" 
+                [pageSize]="10" 
+                showFirstLastButtons 
+                class="paginator-style"></mat-paginator>
         </div>
-        
-
-      
-        
-        
-        
-          
         
           <!-- <table class="table table-striped" 
           style="font-size: 14px;width:max-content;"  
@@ -97,7 +97,7 @@
                   <th class="border" scope="col">ราคาต่อหน่วย</th>
                   <th class="border" scope="col">วิธีการได้มา</th>
                   <th class="border" scope="col">เลขที่เอกสาร</th>
-                  <th class="border" scope="col">ฝ่าย</th>
+                  <th class="border" scope="col">แผนก</th>
                   <th class="border" scope="col">ผู้ใช้งาน</th>
                   <th class="border" scope="col">หมายเหตุ</th> -->
                   <!-- <th class="border" scope="col">ดำเนินการ</th> -->
