--- a/src/app/views/widgets/widgets-dropdown/widgets-dropdown.component.html
+++ b/src/app/views/widgets/widgets-dropdown/widgets-dropdown.component.html
@@ -1,68 +1,143 @@
-<c-row class="g-4">
-  <c-col sm="6" xl="3">
-    <c-widget-stat-a
-      color="primary"
-      [title]="'Users'"
-    >
-      <ng-template cTemplateId="widgetValueTemplate" ngPreserveWhitespaces>
-        26K
-        <span class="fw-normal" style="font-size: 12px;">
-          (-12.4% <svg cIcon name="cilArrowBottom" size="sm"></svg>)
-        </span>
-      </ng-template>
-      <ng-template cTemplateId="widgetActionTemplate">
-        <c-dropdown alignment="end" variant="btn-group">
+<c-row class="g-3" >
+  <c-col sm="6" md="4" xl="2">
+    <div class="card shadow-sm" style="border: none;background-color: green;color: white;">
+      <div class="card-body"> 
+         <c-dropdown alignment="end" variant="btn-group" style="float: right;">
+              <button [caret]="false" cButton cDropdownToggle class="p-0 text-white" color="transparent">
+                <svg cIcon name="cilOptions"></svg>
+              </button>
+              <ul cDropdownMenu>
+                <li><p cDropdownItem>สินทรัพย์ทั้งหมด</p></li>
+              </ul>
+          </c-dropdown>
+        
+            <h2 style="font-weight: bold;">{{ numberOfAssets }} <br/>สินทรัพย์ <svg [cIcon]="icons.cilSave"  height="32" style="float: right;"></svg></h2>
+              
+            <div class="d-grid">
+              <button class="btn btn-sm btn btn-outline-light" >ดูทั้งหมด <svg [cIcon]="icons.cilArrowCircleRight"></svg></button>
+            </div>
+      </div>
+    </div>
+    
+  </c-col>
+  
+  <c-col sm="6" md="4" xl="2">
+    <div class="card shadow-sm" style="border: none;background-color:  #000080;color: white;">
+      <div class="card-body"> 
+        <c-dropdown alignment="end" variant="btn-group" style="float: right;">
           <button [caret]="false" cButton cDropdownToggle class="p-0 text-white" color="transparent">
             <svg cIcon name="cilOptions"></svg>
           </button>
           <ul cDropdownMenu>
-            <li><a [routerLink]="[]" cDropdownItem>Action</a></li>
-            <li><a [routerLink]="[]" cDropdownItem>Another action</a></li>
-            <li><a [routerLink]="[]" cDropdownItem>Something else here</a></li>
-            <li>
-              <hr cDropdownDivider>
-            </li>
-            <li>
-              <button cDropdownItem>Separated link</button>
-            </li>
+            <li><p cDropdownItem>สินทรัพย์คอมพิวเตอร์</p></li>
           </ul>
-        </c-dropdown>
-      </ng-template>
-      <ng-template cTemplateId="widgetChartTemplate">
-        <c-chart [data]="data[0]" [options]="options[0]" class="mt-3 mx-3" height="70" [type]="'line'"></c-chart>
-      </ng-template>
-    </c-widget-stat-a>
+      </c-dropdown>
+       
+            <h2 style="font-weight: bold;">{{assetcom  }} <br/>คอมพิวเตอร์ <svg [cIcon]="icons.cilDevices" height="32" style="float: right;"></svg></h2>
+            
+            <div class="d-grid">
+              <button class="btn btn-sm btn btn-outline-light" >ดูทั้งหมด <svg [cIcon]="icons.cilArrowCircleRight"></svg></button>
+            </div>
+      </div>
+    </div>
+    
   </c-col>
-  <c-col sm="6" xl="3">
-    <c-widget-stat-a
-      [title]="'Income'"
-      color="info"
-    >
-      <ng-template cTemplateId="widgetValueTemplate" ngPreserveWhitespaces>
-        <span>$6.200</span>
-        <span class="fw-normal" style="font-size: 12px;">
-          (40.9%<svg cIcon name="cilArrowTop" size="sm"></svg>)
-        </span>
-      </ng-template>
-      <ng-template cTemplateId="widgetActionTemplate">
-        <c-dropdown alignment="end" variant="btn-group">
+  
+  <c-col sm="6" md="4" xl="2">
+    <div class="card shadow-sm" style="border: none;background-color: orangered;color: white;">
+      <div class="card-body"> 
+        <c-dropdown alignment="end" variant="btn-group" style="float: right;">
           <button [caret]="false" cButton cDropdownToggle class="p-0 text-white" color="transparent">
             <svg cIcon name="cilOptions"></svg>
           </button>
           <ul cDropdownMenu>
-            <li><a [routerLink]="[]" cDropdownItem>Action</a></li>
-            <li><a [routerLink]="[]" cDropdownItem>Another action</a></li>
-            <li><a [routerLink]="[]" cDropdownItem>Something else here</a></li>
-            <li><a [disabled]="true" [routerLink]="[]" cDropdownItem>Disabled</a></li>
+            <li><p cDropdownItem>สินทรัพย์สำนักงาน</p></li>
           </ul>
-        </c-dropdown>
-      </ng-template>
-      <ng-template cTemplateId="widgetChartTemplate">
-        <c-chart [data]="data[1]" [options]="options[1]" class="mt-3 mx-3" height="70" type="line"></c-chart>
-      </ng-template>
-    </c-widget-stat-a>
+      </c-dropdown>
+       
+            <h2 style="font-weight: bold;">{{ assetoffice }} <br/>สำนักงาน 
+              <svg [cIcon]="icons.cilBuilding" height="32" style="float: right;"></svg></h2>
+            
+            <div class="d-grid">
+              <button class="btn btn-sm btn btn-outline-light" >ดูทั้งหมด 
+                <svg [cIcon]="icons.cilArrowCircleRight"></svg></button>
+            </div>
+      </div>
+    </div>
+    
   </c-col>
-  <c-col sm="6" xl="3">
+
+  <c-col sm="6" md="4" xl="2">
+    <div class="card shadow-sm" style="border: none;background-color: slateblue;color: white;">
+      <div class="card-body"> 
+        <c-dropdown alignment="end" variant="btn-group" style="float: right;">
+          <button [caret]="false" cButton cDropdownToggle class="p-0 text-white" color="transparent">
+            <svg cIcon name="cilOptions"></svg>
+          </button>
+          <ul cDropdownMenu>
+            <li><p cDropdownItem>สินทรัพย์โฆษณา</p></li>
+          </ul>
+      </c-dropdown>
+        
+      <h2 style="font-weight: bold;">{{ assetinter }} <br/>โฆษณา 
+        <svg [cIcon]="icons.cilBullhorn" height="32" style="float: right;"></svg></h2>            
+        
+          <div class="d-grid">
+            <button class="btn btn-sm btn btn-outline-light" >ดูทั้งหมด 
+              <svg [cIcon]="icons.cilArrowCircleRight"></svg></button>
+          </div>
+        
+      </div>
+    </div>
+    
+  </c-col>
+
+  <c-col sm="6" md="4" xl="2">
+    <div class="card shadow-sm" style="border: none;background-color: orange;color: white;">
+      <div class="card-body"> 
+        <c-dropdown alignment="end" variant="btn-group" style="float: right;">
+          <button [caret]="false" cButton cDropdownToggle class="p-0 text-white" color="transparent">
+            <svg cIcon name="cilOptions"></svg>
+          </button>
+          <ul cDropdownMenu>
+            <li><p cDropdownItem>จำนวนผู้ใช้ระบบ</p></li>
+          </ul>
+      </c-dropdown>
+        
+      <h2 style="font-weight: bold;">{{ numberOfUsers }} <br/>ผู้ใช้ในระบบ 
+        <svg [cIcon]="icons.cilUser" height="32" style="float: right;"></svg></h2>
+      
+      <div class="d-grid">
+        <button class="btn btn-sm btn btn-outline-light" >ดูทั้งหมด <svg [cIcon]="icons.cilArrowCircleRight"></svg></button>
+      </div>
+      </div>
+    </div>
+    
+  </c-col>
+
+  <c-col sm="6" md="4" xl="2">
+    <div class="card shadow-sm" style="border: none;background-color: orange;color: white;">
+      <div class="card-body"> 
+        <c-dropdown alignment="end" variant="btn-group" style="float: right;">
+          <button [caret]="false" cButton cDropdownToggle class="p-0 text-white" color="transparent">
+            <svg cIcon name="cilOptions"></svg>
+          </button>
+          <ul cDropdownMenu>
+            <li><p cDropdownItem>จำนวนผู้ใช้ระบบ</p></li>
+          </ul>
+      </c-dropdown>
+        
+      <h2 style="font-weight: bold;">{{ numberOfUsers }} <br/>ผู้ใช้ในระบบ 
+        <svg [cIcon]="icons.cilUser" height="32" style="float: right;"></svg></h2>
+      
+      <div class="d-grid">
+        <button class="btn btn-sm btn btn-outline-light" >ดูทั้งหมด <svg [cIcon]="icons.cilArrowCircleRight"></svg></button>
+      </div>
+      </div>
+    </div>
+    
+  </c-col>
+  <!-- <c-col sm="6" md="4" xl="3">
     <c-widget-stat-a
       [title]="'Conversion Rate'"
       color="warning"
@@ -87,11 +162,11 @@
         </c-dropdown>
       </ng-template>
       <ng-template cTemplateId="widgetChartTemplate">
-        <c-chart [data]="data[2]" [options]="options[2]" class="mt-3" height="70" type="line"></c-chart>
+        <c-chart [data]="data[2]" [options]="options[2]" class="mt-3" height="50" type="line"></c-chart>
       </ng-template>
     </c-widget-stat-a>
   </c-col>
-  <c-col sm="6" xl="3">
+  <c-col sm="6" md="4" xl="3">
     <c-widget-stat-a
       [title]="'Sessions'"
       color="danger"
@@ -116,8 +191,8 @@
         </c-dropdown>
       </ng-template>
       <ng-template cTemplateId="widgetChartTemplate">
-        <c-chart [data]="data[3]" [options]="options[3]" class="mt-3 mx-3" height="70" type="bar"></c-chart>
+        <c-chart [data]="data[3]" [options]="options[3]" class="mt-3 mx-3" height="50" type="bar"></c-chart>
       </ng-template>
     </c-widget-stat-a>
-  </c-col>
+  </c-col> -->
 </c-row>
