--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,5 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 
+// @import "../../node_modules/bootstrap-select/dist/css/bootstrap-select.min.css";
+
+
 // If you want to override variables do it here
 @import "variables";
 
